# PercussionProV2

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/percussionapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDetector.cpp  AudioHandler.cpp  AudioStreamWrapper.cpp  CMakeLists.txt  Player.cpp  Sample.cpp  percussionapp.cpp
app/src/main/cpp/fftw3-android/fftw3-android-master/jni/: Application.mk
app/src/main/cpp/include/: AudioDetector.h  AudioHandler.h  AudioStreamWrapper.h  Log.h  Patterns.h  Player.h  Sample.h  percussionapp.h
app/src/main/cpp/include/libs/: AudioFile.h
app/src/main/java/com/example/percussionapp/: AnalyseActivity.kt  AudioEngineViewModel.kt  ComposeActivity.kt  KotlinAudioEngine.kt  ListenActivity.kt  MainActivity.kt  Pattern.kt  PercussionEngineInterface.kt  PracticeActivity.kt  SettingsComposables.kt  SheetComposables.kt  SheetDrawFunctions.kt  SpectrogramBitmapFunctions.kt  TuningActivity.kt
app/src/main/java/com/example/percussionapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: clef.xml  common_time.xml  conga_1_tumbao.xml  cut_time.xml  four_four.xml  note_line.xml  six_eight.xml  stave.xml  stave_line.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/test/java/com/example/percussionapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
